demo video added

--- a/app/src/main/res/drawable/ic_bullets.xml
+++ b/app/src/main/res/drawable/ic_bullets.xml
@@ -1,24 +1,24 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="40dp"
-    android:height="40dp"
+    android:width="512dp"
+    android:height="512dp"
     android:viewportWidth="512"
     android:viewportHeight="512">
   <path
-      android:fillColor="#FF000000"
-      android:pathData="m74.67,43h-64c-5.89,0 -10.67,4.78 -10.67,10.67v64c0,5.89 4.78,10.66 10.67,10.66h64c5.89,0 10.66,-4.78 10.66,-10.66v-64c0,-5.89 -4.78,-10.67 -10.66,-10.67zM74.67,43"/>
+      android:pathData="M152.08,134.17C160.96,134.17 168.17,126.96 168.17,118.08C168.17,109.2 160.96,102 152.08,102C143.2,102 136,109.2 136,118.08C136,126.96 143.2,134.17 152.08,134.17Z"
+      android:fillColor="#000000"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="m74.67,213.67h-64c-5.89,0 -10.67,4.78 -10.67,10.66v64c0,5.89 4.78,10.67 10.67,10.67h64c5.89,0 10.66,-4.78 10.66,-10.67v-64c0,-5.89 -4.78,-10.66 -10.66,-10.66zM74.67,213.67"/>
+      android:pathData="M201.25,102L359.92,102A16.08,16.08 0,0 1,376 118.08L376,118.08A16.08,16.08 0,0 1,359.92 134.17L201.25,134.17A16.08,16.08 0,0 1,185.17 118.08L185.17,118.08A16.08,16.08 0,0 1,201.25 102z"
+      android:fillColor="#000000"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="m74.67,384.33h-64c-5.89,0 -10.67,4.78 -10.67,10.67v64c0,5.89 4.78,10.67 10.67,10.67h64c5.89,0 10.66,-4.78 10.66,-10.67v-64c0,-5.89 -4.78,-10.67 -10.66,-10.67zM74.67,384.33"/>
+      android:pathData="M152.08,268.55C160.96,268.55 168.17,261.35 168.17,252.46C168.17,243.58 160.96,236.38 152.08,236.38C143.2,236.38 136,243.58 136,252.46C136,261.35 143.2,268.55 152.08,268.55Z"
+      android:fillColor="#000000"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="m170.67,107h320c11.8,0 21.33,-9.54 21.33,-21.33s-9.54,-21.34 -21.33,-21.34h-320c-11.8,0 -21.34,9.54 -21.34,21.34s9.54,21.33 21.34,21.33zM170.67,107"/>
+      android:pathData="M201.25,236.38L359.92,236.38A16.08,16.08 0,0 1,376 252.47L376,252.47A16.08,16.08 0,0 1,359.92 268.55L201.25,268.55A16.08,16.08 0,0 1,185.17 252.47L185.17,252.47A16.08,16.08 0,0 1,201.25 236.38z"
+      android:fillColor="#000000"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="m490.67,235h-320c-11.8,0 -21.34,9.54 -21.34,21.33s9.54,21.34 21.34,21.34h320c11.8,0 21.33,-9.54 21.33,-21.34s-9.54,-21.33 -21.33,-21.33zM490.67,235"/>
+      android:pathData="M152.08,402.93C160.96,402.93 168.17,395.73 168.17,386.85C168.17,377.97 160.96,370.77 152.08,370.77C143.2,370.77 136,377.97 136,386.85C136,395.73 143.2,402.93 152.08,402.93Z"
+      android:fillColor="#000000"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="m490.67,405.67h-320c-11.8,0 -21.34,9.54 -21.34,21.33s9.54,21.33 21.34,21.33h320c11.8,0 21.33,-9.54 21.33,-21.33s-9.54,-21.33 -21.33,-21.33zM490.67,405.67"/>
+      android:pathData="M201.17,370.77L360,370.77A16,16 0,0 1,376 386.77L376,386.77A16,16 0,0 1,360 402.77L201.17,402.77A16,16 0,0 1,185.17 386.77L185.17,386.77A16,16 0,0 1,201.17 370.77z"
+      android:fillColor="#000000"/>
 </vector>
